--- a/book.html
+++ b/book.html
@@ -48,7 +48,7 @@
               <i class="fa-solid fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,950 <sub>per night</sub> <a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,950 <sub>per night</sub> <a href="https://rzp.io/l/JQWUpTdQxz" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -69,7 +69,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,720 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,720 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -90,7 +90,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,780 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,780 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -111,7 +111,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,520 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,520 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -132,7 +132,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,520 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,520 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -153,7 +153,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,540 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,540 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -174,7 +174,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,310 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,310 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
@@ -195,7 +195,7 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,280 <sub>per night</sub><a href="" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,280 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
             </div>
           </article>
   
