--- a/book.html
+++ b/book.html
@@ -48,7 +48,8 @@
               <i class="fa-solid fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,950 <sub>per night</sub> <a href="https://rzp.io/l/JQWUpTdQxz" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,950 <sub>per night</sub> </p>
+              <a href="https://rzp.io/l/JQWUpTdQxz" class="button">BOOK</a>
             </div>
           </article>
   
@@ -69,18 +70,19 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,720 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,720 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
           <article class="room-card">
             <div class="img">
-              <a href="../img/room3.webp" data-lightbox="img">
-                <img src="../img/room3.webp" alt="" srcset="">
+              <a href="../img/room3.jfif" data-lightbox="img">
+                <img src="../img/room3.jfif" alt="" srcset="">
               </a>
             </div>
             <div class="details">
-            <p>Amet consectetur adipisicing elit.</p>
+            <p>Amet consectetur adip.</p>
             </div>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -90,7 +92,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,780 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,780 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
@@ -111,7 +114,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,520 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,520 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
@@ -122,7 +126,7 @@
               </a>
             </div>
             <div class="details">
-            <p>Accusamus, repellat excepturi</p>
+            <p>Accusamus, repellat ex</p>
             </div>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -132,7 +136,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,520 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,520 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
@@ -143,7 +148,7 @@
               </a>
             </div>
             <div class="details">
-            <p>Temporibus ea officia,dolor!</p>
+            <p>Temporibus ea officia,d!</p>
             </div>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -153,7 +158,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,540 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,540 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
@@ -164,7 +170,7 @@
               </a>
             </div>
             <div class="details">
-            <p>Magnam dignissimos quod velit eveniet</p>
+            <p>Magnam dignissimos quo</p>
             </div>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -174,7 +180,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,310 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,310 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
@@ -185,7 +192,7 @@
               </a>
             </div>
             <div class="details">
-            <p>Ipsam labore expedita maxime</p>
+            <p>Ipsam labore expedita m</p>
             </div>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -195,7 +202,8 @@
               <i class="fa-regular fa-star"></i>
             </div>
             <div>
-              <p class="cost">Rs 1,280 <sub>per night</sub><a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a></p>
+              <p class="cost">Rs 1,280 <sub>per night</sub></p>
+              <a href="https://rzp.io/l/7I05KjZ5" class="button">BOOK</a>
             </div>
           </article>
   
