--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
       </div>
       <div  class="card2">
       <p>&nbsp;&nbsp;&nbsp; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis saepe est veniam a sapiente numquam veritatis laborum explicabo eveniet aspernatur architecto nesciunt necessitatibus odio dignissimos placeat voluptas fuga recusandae nemo porro ut voluptate, maiores eos, quae totam? Odit harum minus, magni aliquam eum tempore soluta! Delectus possimus reprehenderit quam inventore iste soluta. Maxime dolore minima saepe cum quidem labore reprehenderit nesciunt expedita repellat animi impedit incidunt harum enim ab, nisi fuga quia iste rem, autem blanditiis voluptas non quisquam veniam. Eos optio, neque quis molestiae assumenda, nesciunt voluptates commodi facilis libero et autem itaque nam nemo. Totam aperiam sequi aspernatur.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ipsam maxime nostrum esse, accusamus doloribus. Adipisci expedita voluptate ut suscipit delectus exercitationem ipsum excepturi! Quod maxime doloremque velit, impedit officia magnam facilis optio! Illo fuga quam voluptate error obcaecati necessitatibus deserunt! Ipsam sint quaerat molestias ratione. Error quas dolores a.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ipsam maxime nostrum esse, accusamus doloribus. Adipisci expedita voluptate ut suscipit delectus exercitationem ipsum 
       </p>
     </div>
     <div class="card2">
